# html2md

./: .gitignore  README.md  pyproject.toml
scripts/: html2md-fetch.ps1  html2md-fetch.sh
src/html2md/: __init__.py  __main__.py  cli.py  extract.py  output.py
tests/: test_cli.py  test_extract.py
