[project]
name = "html2md"
version = "0.1.0"
description = "Small Unix-style HTML-to-Markdown CLI built around trafilatura"
readme = "README.md"
authors = [
    { name = "Andrewy-gh", email = "andrewydev6@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "markdownify>=1.2.2",
    "trafilatura>=2.0.0",
]

[project.scripts]
html2md = "html2md.cli:main"

[dependency-groups]
dev = [
    "mypy>=1.20.1",
    "pytest>=9.0.3",
    "ruff>=0.15.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["html2md"]

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"
